--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -3,7 +3,7 @@ name: build and test
 on:
   push:
   pull_request:
-    branches: [ main, ci-debug ]
+    branches: [ main, develop ]
     paths:
     - '**.cs'
     - '**.csproj'
