--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   DOTNET_VERSION: '5.0.301' # The .NET SDK version to use
+  DOTNET_FORMAT: '5.1.250801'
 
 jobs:
   build-and-test:
@@ -32,6 +33,9 @@ jobs:
       
     - name: Build
       run: dotnet build --configuration Release --no-restore
+      
+    - name: Install
+      run: dotnet tool install --global dotnet-format --version ${{ env.DOTNET_FORMAT }}
 
     - name: Format
       run: dotnet-format
