--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -6,4 +6,50 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Pictures\icon_pinc_2.png" />
+    <None Remove="Pictures\ii_квадрат.png" />
+    <None Remove="Pictures\ii_круг.png" />
+    <None Remove="Pictures\ii_линия.png" />
+    <None Remove="Pictures\ii_треугольник.png" />
+    <None Remove="Pictures\i_выделения_Активная.png" />
+    <None Remove="Pictures\i_выделения_НеАктивная.png" />
+    <None Remove="Pictures\i_зум_Активная.png" />
+    <None Remove="Pictures\i_зум_НеАктивная.png" />
+    <None Remove="Pictures\i_квадрат_Активная.png" />
+    <None Remove="Pictures\i_квадрат_НеАктивный.png" />
+    <None Remove="Pictures\i_круг_Активная.png" />
+    <None Remove="Pictures\i_круг_НеАктивная.png" />
+    <None Remove="Pictures\i_линия_Активная.png" />
+    <None Remove="Pictures\i_линия_НеАктивня.png" />
+    <None Remove="Pictures\i_треугольник_Активная.png" />
+    <None Remove="Pictures\i_треугольник_НеАктивная.png" />
+    <None Remove="Pictures\i_удаление_Активная.png" />
+    <None Remove="Pictures\i_удаление_НеАктивная.png" />
+    <None Remove="Pictures\подложка_под_ii.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Pictures\icon_pinc_2.png" />
+    <Resource Include="Pictures\ii_квадрат.png" />
+    <Resource Include="Pictures\ii_круг.png" />
+    <Resource Include="Pictures\ii_линия.png" />
+    <Resource Include="Pictures\ii_треугольник.png" />
+    <Resource Include="Pictures\i_выделения_Активная.png" />
+    <Resource Include="Pictures\i_выделения_НеАктивная.png" />
+    <Resource Include="Pictures\i_зум_Активная.png" />
+    <Resource Include="Pictures\i_зум_НеАктивная.png" />
+    <Resource Include="Pictures\i_квадрат_Активная.png" />
+    <Resource Include="Pictures\i_квадрат_НеАктивный.png" />
+    <Resource Include="Pictures\i_круг_Активная.png" />
+    <Resource Include="Pictures\i_круг_НеАктивная.png" />
+    <Resource Include="Pictures\i_линия_Активная.png" />
+    <Resource Include="Pictures\i_линия_НеАктивня.png" />
+    <Resource Include="Pictures\i_треугольник_Активная.png" />
+    <Resource Include="Pictures\i_треугольник_НеАктивная.png" />
+    <Resource Include="Pictures\i_удаление_Активная.png" />
+    <Resource Include="Pictures\i_удаление_НеАктивная.png" />
+    <Resource Include="Pictures\подложка_под_ii.png" />
+  </ItemGroup>
+
 </Project>
