--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Geometry\Geometry.csproj" />
     <ProjectReference Include="..\LinearAlgebra\LinearAlgebra.csproj" />
   </ItemGroup>
 
