added quadratic curve and texture rendering shader

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -18,12 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="shaders\frag.fsh">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="shaders\vertex.vsh">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <Folder Include="shaders\" />
   </ItemGroup>
 
 </Project>
