--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -38,4 +38,4 @@ jobs:
       run: dotnet tool install --global dotnet-format --version ${{ env.DOTNET_FORMAT }}
 
     - name: Format
-      run: dotnet-format --severity info
+      run: dotnet-format --severity='info'
