--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -20,6 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="shaders\documentQuad.vsh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="shaders\coloring.fsh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="shaders\texturesIntersection.fsh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
