--- a/IO/IO.csproj
+++ b/IO/IO.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="IronPdf" Version="2022.2.4887" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Svg" Version="3.4.0" />
   </ItemGroup>
 
