--- a/IO/IO.csproj
+++ b/IO/IO.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Svg" Version="3.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Geometry\Geometry.csproj" />
+    <ProjectReference Include="..\Logic\Logic.csproj" />
+  </ItemGroup>
+
 </Project>
