Fixed textureUnion fragment shader, fixed textureUnion file to always copy

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -35,6 +35,9 @@
     <None Update="shaders\fullscreenQuad.vsh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="shaders\textureUnion.fsh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
