--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -20,10 +20,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="shaders\fullscreenColoring.fsh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="shaders\documentQuad.vsh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="shaders\coloring.fsh">
+    <None Update="shaders\floatTextureColoring.fsh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="shaders\texturesIntersection.fsh">
