Reworked render to not use document size framebuffers and instead use screen size framebuffers, picture is now scalable

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="shaders\fullscreenColoring.fsh">
+    <None Update="shaders\flatColoring.fsh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="shaders\documentQuad.vsh">
@@ -36,9 +36,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="shaders\curveToTexture.fsh">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="shaders\fullscreenQuad.vsh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="shaders\textureUnion.fsh">
