Added OpenDocument, CloseDocument, SaveAsCurrentDocument Commands

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -61,6 +61,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Geometry\Geometry.csproj" />
+		<ProjectReference Include="..\IO\IO.csproj" />
 		<ProjectReference Include="..\LinearAlgebra\LinearAlgebra.csproj" />
 		<ProjectReference Include="..\Logic\Logic.csproj" />
 	</ItemGroup>
