--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -73,6 +73,9 @@
 		<None Update="shaders\coloring.fsh">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+		<None Update="shaders\texturesExclusion.fsh">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 		<None Update="shaders\texturesIntersection.fsh">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
@@ -103,7 +106,7 @@
     <None Update="shaders\curveToTexture.fsh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="shaders\textureUnion.fsh">
+    <None Update="shaders\texturesUnion.fsh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Texts\autors.txt">
