--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -56,6 +56,7 @@
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
 		<PackageReference Include="OpenTK" Version="4.3.0" />
 		<PackageReference Include="OpenTK.GLWpfControl" Version="4.1.0" />
+		<PackageReference Include="PixiEditor.ColorPicker" Version="3.2.0" />
 		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
 
