--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -12,8 +12,12 @@
     <None Remove="Pictures\ii_круг.png" />
     <None Remove="Pictures\ii_линия.png" />
     <None Remove="Pictures\ii_треугольник.png" />
+    <None Remove="Pictures\i_база_Активная.png" />
+    <None Remove="Pictures\i_база_НеАктивная.png" />
     <None Remove="Pictures\i_выделения_Активная.png" />
     <None Remove="Pictures\i_выделения_НеАктивная.png" />
+    <None Remove="Pictures\i_вырезание_Активная.png" />
+    <None Remove="Pictures\i_вырезание_НеАктивная.png" />
     <None Remove="Pictures\i_зум_Активная.png" />
     <None Remove="Pictures\i_зум_НеАктивная.png" />
     <None Remove="Pictures\i_квадрат_Активная.png" />
@@ -22,6 +26,10 @@
     <None Remove="Pictures\i_круг_НеАктивная.png" />
     <None Remove="Pictures\i_линия_Активная.png" />
     <None Remove="Pictures\i_линия_НеАктивня.png" />
+    <None Remove="Pictures\i_Объединение_Активная.png" />
+    <None Remove="Pictures\i_объединение_НеАктивная.png" />
+    <None Remove="Pictures\i_пересечение_Активная.png" />
+    <None Remove="Pictures\i_пересечение_НеАктивная.png" />
     <None Remove="Pictures\i_треугольник_Активная.png" />
     <None Remove="Pictures\i_треугольник_НеАктивная.png" />
     <None Remove="Pictures\i_удаление_Активная.png" />
@@ -35,6 +43,13 @@
     <Resource Include="Pictures\ii_круг.png" />
     <Resource Include="Pictures\ii_линия.png" />
     <Resource Include="Pictures\ii_треугольник.png" />
+    <Resource Include="Pictures\i_вырезание_Активная.png" />
+    <Resource Include="Pictures\i_вырезание_НеАктивная.png" />
+    <Resource Include="Pictures\i_пересечение_Активная.png" />
+    <Resource Include="Pictures\i_пересечение_НеАктивная.png" />
+    <Resource Include="Pictures\i_объединение_Активная.png" />
+    <Resource Include="Pictures\i_база_Активная.png" />
+    <Resource Include="Pictures\i_объединение_НеАктивная.png" />
     <Resource Include="Pictures\i_выделения_Активная.png" />
     <Resource Include="Pictures\i_выделения_НеАктивная.png" />
     <Resource Include="Pictures\i_зум_Активная.png" />
@@ -42,6 +57,7 @@
     <Resource Include="Pictures\i_квадрат_Активная.png" />
     <Resource Include="Pictures\i_квадрат_НеАктивный.png" />
     <Resource Include="Pictures\i_круг_Активная.png" />
+    <Resource Include="Pictures\i_база_НеАктивная.png" />
     <Resource Include="Pictures\i_круг_НеАктивная.png" />
     <Resource Include="Pictures\i_линия_Активная.png" />
     <Resource Include="Pictures\i_линия_НеАктивня.png" />
