--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,6 +36,10 @@
     <None Remove="Pictures\i_удаление_Активная.png" />
     <None Remove="Pictures\i_удаление_НеАктивная.png" />
     <None Remove="Pictures\подложка_под_ii.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
